--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore Gradle project-specific cache directory
-*.gradle
+*.gradle/
 
 # Ignore Gradle build output directory
 build
@@ -16,5 +16,3 @@ gradle
 .settings
 .vscode
 
-# Ignore Gradle project-specific cache directory
-.gradle
