--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,13 @@ application {
 dependencies{
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
+
+}
+
+test {
+    testLogging.showStandardStreams = true
+    useJUnitPlatform()
 }
