--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies{
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
 
 }
 
