--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,10 @@ dependencies{
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
+}
 
+run{
+    standardInput = System.in
 }
 
 test {
