--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins{
     id 'java'
+    id 'maven-publish'
     id 'application'
 }
 
 group 'fr.guillaume'
-version '1.0.1'
+version '1.0.2'
 
 repositories{
     mavenCentral()
@@ -20,6 +21,14 @@ dependencies{
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
 
 run{
