--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ application {
 dependencies{
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    //testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     runtimeOnly group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
@@ -36,6 +37,12 @@ run{
 }
 
 test {
-    testLogging.showStandardStreams = true
-    useJUnitPlatform()
+    testLogging {
+        events "failed", "passed", "skipped"
+        showStandardStreams true
+        exceptionFormat 'full'
+    }
+    useJUnitPlatform {
+        includeTags 'LeagueAPI', 'ChampionAPI'
+    }
 }
